[project]
name = "python-ab-test-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "psycopg2>=2.9.12",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.50",
]
